# doc-layoutana

./: .gitignore  README.md  local.env  main.py  prod.env  pyproject.toml
docker/: Dockerfile  build.sh  run-docker.sh
layoutana/: bbox.py  data.py  equations.py  headers.py  models.py  ordering.py  picture.py  schema.py  segmentation.py  settings.py  spans.py  table.py  utils.py
